--- a/android/src/main/res/layout/qrscanner_view_camera.xml
+++ b/android/src/main/res/layout/qrscanner_view_camera.xml
@@ -5,7 +5,7 @@
     android:background="#fff"
     android:orientation="vertical">
     <com.serenegiant.widget.AspectRatioSurfaceView
-        android:id="@+id/surface_view"
+        android:id="@+id/qrscanner_surface_view"
         android:layout_width="300dp"
         android:layout_height="300dp"
         android:layout_centerInParent="true" />
